// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MemberOptionsMenu should not render menu if I am member 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should not render menu if person is owner 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should render menu if I am admin and person is not owner 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Connect(Translate(MemberOptionsMenu))
      iAmAdmin={true}
      iAmOwner={false}
      myId="1"
      organization={
        Object {
          "id": "1234",
          "user_created": false,
        }
      }
      person={
        Object {
          "contact_count": 5,
          "full_name": "Full Name",
          "id": "123",
          "uncontacted_count": 3,
        }
      }
      personIsAdmin={false}
      personOrgPermission={
        Object {
          "id": "111",
          "permission_id": 4,
        }
      }
    />
  </Flex>
</Card>
`;

exports[`render MemberOptionsMenu should render menu if person is me 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Connect(Translate(MemberOptionsMenu))
      iAmAdmin={false}
      iAmOwner={false}
      myId="1"
      organization={
        Object {
          "id": "1234",
          "user_created": false,
        }
      }
      person={
        Object {
          "contact_count": 5,
          "full_name": "Full Name",
          "id": "1",
          "uncontacted_count": 3,
        }
      }
      personIsAdmin={false}
      personOrgPermission={
        Object {
          "id": "111",
          "permission_id": 4,
        }
      }
    />
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render 0 assigned 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          0 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render 0 uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count cru org should render assigned and uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`render contacts count user created org should not render contacts count 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
    </Flex>
  </Flex>
</Card>
`;
